--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "laravel-echo": "^1.5.3",
     "node-sass": "^4.11.0",
+    "pusher-js": "^4.4.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
