--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "healthqo",
+  "name": "asap",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,6 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "laravel-echo": "^1.5.3",
     "node-sass": "^4.11.0",
     "pusher-js": "^4.4.0",
     "react": "^16.8.6",
